--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-  <title>Test</title>
+  <title>Chat</title>
+  <!-- CDN for jQuery and Bootstrap. -->
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -13,27 +14,27 @@
 </head>
 <body>
 <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Chat</a>
-        </div>
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Chat</a>
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse loggedIn" id="collapse">
-          <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" id="nickname"></a></li>
-          <li><a href="#" id="logout" onclick="logOut()">Log Out</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse loggedIn" id="collapse">
+      <ul class="nav navbar-nav navbar-right">
+      <li><a href="#" id="nickname"></a></li>
+      <li><a href="#" id="logout" onclick="logOut()">Log Out</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
   <div class="container">
     
     <div class="row">
@@ -44,7 +45,7 @@
           </div>
           <div class="panel-body">
             <form id="newChat">
-              <input type="text" name="u">
+              <input type="text" placeholder="friend's username" name="u">
               <input type="submit" class="btn btn-xs btn-primary">
             </form>
           </div>
@@ -64,7 +65,7 @@
           <div class="panel-heading">
             <h3 class="panel-title msgheading"></h3>
           </div>
-          <div class="panel-body">
+          <div class="panel-body" style="padding: 0px;">
             <ul id="messages">
             </ul>
           </div>
@@ -74,7 +75,7 @@
     <div class="row">
       <div class="col-md-9 col-md-offset-3">
         <form id="send" action="">
-          <input type="text" autocomplete="off" name="message" id="message">
+          <input type="text" autocomplete="off" placeholder="message" name="message" id="message">
           <input type="submit" class="btn sbmt">
         </form>
       </div>
@@ -86,7 +87,7 @@
         <div class="modal-header">Pick a nickname</div>
         <div class="modal-body">
           <form action="" id="login">
-            <input type="text" name="username">
+            <input type="text" placeholder="choose a nickname" name="username">
             <input type="submit" class="btn btn-default btn-sm">
           </form>
         </div>
