added markdown support

--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/assets/stylesheet.css">
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/0.4.0/Showdown.min.js"></script>
   <script src="assets/chat.js"></script>
 </head>
 <body>
